--- a/public/main.css
+++ b/public/main.css
@@ -2,9 +2,17 @@
 	font-family: 'avenir';
 }
 
+body {
+	background-color: #95B9C7
+}
+
 #imgholder {
 	text-align: center;
 	padding-bottom: 20px;
+	background-color: white;
+	margin-bottom: 10px;
+	margin-top: 10px;
+	height: 95px;
 }
 
 img#logo {
@@ -13,24 +21,31 @@ img#logo {
 
 .responsebox {
 	width: 45%;
-	border: 1px solid black;
+	border: 3px solid white;
 	height: 210px;
 	margin-right: 15px;
 	margin: auto;
 	margin-bottom: 20px;
 	font-family: 'avenir';
+	background-color: #C7A395;
+	padding-bottom: 5px
 }
 
 textarea {
 	width: 85%;
 	height: 130px;
+	margin-bottom: 5px
 }
 
 #submitResponse {
 	width: 55%;
-	border: 1px solid black;
+	border: 3px solid white;
 	margin: auto;
 	font-family: 'avenir';
+	background-color: #95B9C7;
+	color: white;
+	height: 17px;
+	padding-top: 2px;
 }
 
 .searchbox {
@@ -50,37 +65,46 @@ textarea {
 	display: inline-block;
 	width: 15%;
 	margin-right: 1%;
-	border: 1px solid black;
+	border: 3px solid white;
+	font-family: 'avenir';
+	background-color: #C7A395;
+	box-shadow: 3px 3px 20px black;
 }
 
 #search {
-	width: 76%;
+	width: 46%;
 	margin: auto;
 }
 
 .button {
 	width: 18%;
-	border: 1px solid black;
+	border: 3px solid white;
 	display: inline-block;
 	text-align: center;
 	font-family: 'avenir';
+	background-color: #C7A395;
+	margin-bottom: 10px;
+	box-shadow: 3px 3px 20px black;
 }
 
 .textwindow {
-	border: 1px solid black;
+	border: 3px solid white;
 	min-height: 400px;
 	width: 98%;
 	margin: auto;
 	text-align: left;
 	font-family: 'avenir';
+	background-color: #C7A395;
 }
 
 .textbox {
 	width: 95%;
 	margin: auto;
-	border-bottom: 1px solid black;
+	border: 3px solid #95B9C7;
 	margin-bottom: 4px;
 	font-family: 'avenir';
+	background-color: white;
+	margin-top: 3px;
 }
 
 body {
@@ -90,4 +114,10 @@ body {
 /*testing*/
 #main {
 	display: none
+}
+
+footer {
+	font-family: 'avenir';
+	font-size: 14px;
+	padding-top: 10px
 }
