--- a/public/main.css
+++ b/public/main.css
@@ -50,7 +50,7 @@ textarea {
 
 .searchbox {
 	text-align: center;
-	width: 75%;
+	width: 95%;
 	display: inline-block;
 	font-family: 'avenir';
 }
@@ -92,10 +92,12 @@ textarea {
 	min-height: 400px;
 	width: 98%;
 	margin: auto;
-	text-align: left;
 	font-family: 'avenir';
 	background-color: #C7A395;
+	text-align: center;
 }
+
+/*text box styling*/
 
 .textbox {
 	width: 95%;
@@ -105,7 +107,23 @@ textarea {
 	font-family: 'avenir';
 	background-color: white;
 	margin-top: 3px;
+	display: inline-flex;
+	padding-bottom: 5px;
 }
+
+.fromDiv {
+	width: 16%;
+	min-height: 50px;
+	display: inline-block;
+	font-size: 12px;
+	margin: auto;
+	vertical-align: top;
+}
+
+#bold {
+	font-weight: bold;
+}
+
 
 body {
 	text-align: center;
